sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value fini
  fini=false
  ^AlgBubbleSort1:5: error: not found: value fini
    fini=true
    ^AlgBubbleSort1:8: error: not found: value fini
      fini=false
      ^AlgBubbleSort1:10: error: not found: value fini
    if (fini==true){
        ^