sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  fini=false
  for (i <- 0 to getNombreValeurs()-2){
    fini=true
    if (plusPetit(i+1,i)==true){
      echange(i,i+1)
      fini=false
    }
    if (fini==true){
      return
    }
  }
  return 
}